Fixing z-index issue with select2 dropdown on a modal

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -249,3 +249,7 @@ $profile_page_fs_relationship: $profile_page_fs_small;
 .modal {
   display: block;
 }
+
+.select2-container {
+  z-index: 1060;
+}
